2000-11-26  olicha  <olivier.chapuis@free.fr>

	* fvwm/builtins.c (strokeFunc):
	Fixed problems with window title bar and frame

2000-11-26  Dan Espen  <dane@mk.telcordia.com>

	* tests/purify/purify.fvwm2rc: Add Menu command, MenuStyle, BusyCursor,
	CursorStyle brought up to date, DefaultColors, DefaultColorset,
	DefaultFont, DefaultIcon, DefaultLayers, Emulate, IconFont.

2000-11-26  Chris Rankin  <rankinc@zipworld.com.au>

	* fvwm/events.c (My_XNextEvent)
	Restart the call to fvwmSelect if (and only if) it was
	interrupted by a harmless signal like SIGCHLD or SIGPIPE.

2000-11-26  Chris Rankin  <rankinc@zipworld.com.au>

	* lib/fvwmsignal.h (New macro BSD_BLOCK_ALL_SIGNALS)
	* fvwm/fvwm.c (InstallSignals)
	Extra comments

	* fvwm/events.c (My_XNextEvent)
	Timeout is undefined when fvwmSelect returns, so must be reinitialised
	Also, select has only timed out if it return 0. If it returns -1 then
	this is an error and we would like to know about it.

2000-11-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (map_window):
	"finished" ICCCM fix

	* fvwm/events.c (HandleMapRequestKeepRaised):
	workaround for buggy transientfor hint

	* fvwm/add_window.c (destroy_window_font):
	(setup_window_font):
	(destroy_icon_font):
	(setup_icon_font):
	* fvwm/window_flags.h (SETM_USING_DEFAULT_ICON_FONT):
	* fvwm/fvwm.h (struct):
	fixed font core dumpsm

	* fvwm/menus.c (MenuInteraction):
	fixed MissingSubmenuFunction

2000-11-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (destroy_window_font):
	(destroy_icon_font):
	fixed core dump

	* fvwm/focus.c (focus_grab_buttons):
	* fvwm/fvwm.h (FvwmWindow):
	* fvwm/bindings.c (ParseBinding):
	(binding_cmd):
	* fvwm/fvwm.c (InitVariables):
	* libs/defaults.h (DEFAULT_BUTTONS_TO_GRAB):
	* fvwm/focus.c (update_focus_grabs):
	(update_window_focus_grab):
	* fvwm/bindings.c (binding_cmd):
	overhauled whole button grabbing code grab now work immediately and are
	applied with normal window updates
